--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,7 @@
-﻿@page "/"
+﻿@inherits IndexBase
 
-<h1>Hello, world!</h1>
+@page "/"
 
-Welcome to your new app.
+<div style="@Universe.CssStyle" class="universe">
+    <img src="@Universe.CurrentBackgroundImage" />
+</div>
