--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,3 +7,14 @@ html, body {
     background-color: black;
 }
 
+.universe {
+    border: 0; 
+    padding: 0; 
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+  	
+	margin: auto;
+}
