--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,6 +2,26 @@
 
 @page "/"
 
-<div style="@Universe.CssStyle" class="universe">
-    <img src="@Universe.CurrentBackgroundImage" />
-</div>
+<div class="row">
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+</div>        
+<div class="row">
+    <div class="col"></div>
+    <div style="@Universe.DivStyle" class="col">
+        @foreach (var printable in Universe.ToRender)
+        {
+            <img src="@printable.Image" style="@printable.CssStyle" class="zero"/>    
+        }    
+    </div>
+    <div class="col"></div>
+</div>        
+<div class="row">
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+</div>        
+
+
+
