--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,27 +1,23 @@
 ﻿@inherits IndexBase
 
 @page "/"
-
-<div class="row">
-    <div class="col"></div>
-    <div class="col"></div>
-    <div class="col"></div>
-</div>        
-<div class="row">
-    <div class="col"></div>
-    <div style="@Universe.DivStyle" class="col">
-        @foreach (var printable in Universe.ToRender)
-        {
-            <img src="@printable.Image" style="@printable.CssStyle" class="zero"/>    
-        }    
-    </div>
-    <div class="col"></div>
-</div>        
-<div class="row">
-    <div class="col"></div>
-    <div class="col"></div>
-    <div class="col"></div>
-</div>        
-
+<div class="outer-div">    
+     
+    <div class="row">
+        <div class="col"></div>
+        <div style="@Universe.DivStyle" class="col">
+            @foreach (var printable in Universe.ToRender)
+            {
+                <img src="@printable.Image" style="@printable.CssStyle" class="zero"/>    
+            }    
+        </div>
+        <div class="col"></div>
+    </div>        
+    <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>        
+</div>
 
 
