--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,15 +11,17 @@ html, body {
     border: 0; padding: 0; margin: 0;
 }
 
-.gggggg {
-    width: 288px; height: 512px;
-    position: absolute;
+.outer-div {
+    display: flex;
+    flex-flow: column;
+    height: 100vh;
 } 
 
 .row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;    
+    flex: 1;
 }
 
 .col {
